--- a/index.css
+++ b/index.css
@@ -16,6 +16,6 @@ button{
     padding: 15px;
     border-radius: 40px;
     color: white;
-    font-family: monospace;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
 }
